# arabic-cognitive-ai

./: .gitignore  ACAI_Complete_Setup_Guide.docx  README.md  experiments_plan.md  package-lock.json  setup_all.py  slurm_finetune.sh
backend/: .env  .gitignore  acai_memory.db  acai_memory.py  backend_main.py  main.py  model_config.py  orchestrator_v2.py  pyproject.toml  requirements.txt
backend/agents/: langgraph_orchestrator.py  orchestrator.py
backend/app/: dependencies.py  main.py
backend/app/core/: agent_config.py  config.py  logger.py  orchestrator_config.py  security.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  agent.py  chat.py  llm.py  query.py  response.py  user.py
backend/app/db/repositories/: chat.py
backend/app/models/: agent.py  chat.py  llm.py  query.py  response.py  user.py
backend/app/routers/: chat.py  health.py  query.py  search.py
backend/app/schemas/: README.md  query.py
backend/app/services/: README.md  agent.py  evaluation.py  memory.py  orchestrator.py  query.py  rag.py
backend/arabic/: bahraini_qlora_train.py  dialect_specialist.py  pipeline.py
backend/feedback/: system.py
backend/grc/: grc_module.py
backend/ingestion/: pipeline.py
backend/knowledge_graph/: connector.py
backend/llm/: inference_client.py
backend/memory/: cognitive_memory.py
backend/rag/: advanced_graphrag.py  graphrag_impl.py  pipeline.py
backend/tools/: registry.py
docker/: Dockerfile.backend
eval/: benchmark_harness.py
frontend/: README.md  (+2 more)
frontend-new/: README.md  index.html  package-lock.json  package.json
(+23 files in other folders)
