[project]
name = "acai-backend"
version = "0.1.0"
description = "Arabic Cognitive AI backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.14.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.uv]
package = true

[project.scripts]
app = "app.main:main"

[tool.setuptools.packages.find]
include = ["app"]
